add logic to allow extraction of product data for 1 page

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
         {% endblock %}       
 
         
-        <title>Workforce</title>
+        <title>Python-Extraction</title>
     </head>
     <body>        
         <nav class="row m-0 bg-dark">            
