add products to database in json format

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -8,7 +8,7 @@
 {% block content %}    
     <div class="row m-0">
         <div class="col-12 p-3">
-            <div class="text-center h1 text-info" href="#">My Site</div>               
+            <a class="btn btn-warning h1" href="{% url 'extractor' %}">Extract</a>               
         </div>
     </div>        
 {% endblock %}
