--- a/static/css/base.css
+++ b/static/css/base.css
@@ -2,7 +2,7 @@ body, html {
     margin: 0;    
     display: flex;
     flex-direction: column; 
-    height: 100vh;      
+    height: 100vh;         
 } 
 
 nav a {
@@ -11,4 +11,16 @@ nav a {
 
 .content {   
     flex: 1;              
+}
+
+.overlay{
+    background: black url('/media/loading.gif') no-repeat center center;
+    opacity: 0.5;
+    width: 100%;
+    height: 100%; 
+    z-index: 2;
+    top: 0; 
+    left: 0; 
+    position: fixed; 
+    display: none;
 }
