--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -8,17 +8,37 @@
 {% block content %}
     <div class="row m-0">
         <div class="col-12 p-3">
-            <a class="h3 refresh" href="{% url 'extractor' %}">URL: https://www.manomano.fr/scie-a-main-et-lames-de-scie-493</a>               
+            <div>Link: https://www.manomano.fr/scie-a-main-et-lames-de-scie-493</div>               
         </div>
-        <div class="col-12 p-3">
+        <div class="row m-0 p-0 border-top d-flex justify-content-left">
+            <div class="col-10 col-md-4 col-lg-3 mt-2">
+                <form action="{% url 'home' %}" method="GET" id="characterForm">
+                    {% csrf_token %}
+                    <div class="input-group">
+                        <input type="search" class="form-control custom-select rounded-0 border-2 border-dark" name="q" placeholder="Product Name">
+                        <button class="btn btn-outline-dark bg-dark text-light rounded-0 input-group-append ml-auto search-button" type="submit"><div class="text">Search</div></button>
+                    </div>                
+                </form> 
+            </div>      
+        </div>
+        <div class="col-12 mt-3">
+            <a class="btn btn-info h1 refresh" href="{% url 'home' %}">Reset Search</a>               
+        </div>  
+        <div class="col-12 mt-3">
             <a class="btn btn-warning h1 refresh" href="{% url 'extractor' %}">Refresh Data</a>               
-        </div>
+        </div>              
     </div>    
-    {% for product in products %}
-        <div class="row m-0">
-            <div class="col-12">
-                <a href="{% url 'product_details' product_id=product.id %}">{{ product.id }}.{{ product.product_name }}</a>
-            </div>        
+    {% for product in products %}        
+        <div class="row m-1">
+            {% if forloop.counter|divisibleby:2 %}
+                <div class="col-12">                
+                    <a href="{% url 'product_details' product_id=product.id %}">{{ product.id }}.{{ product.product_name }}</a>
+                </div>
+            {% else %}
+                <div class="col-12 bg-line"> 
+                    <a href="{% url 'product_details' product_id=product.id %}">{{ product.id }}.{{ product.product_name }}</a>
+                </div>
+            {% endif %}                   
         </div>    
     {% endfor %}           
 {% endblock %}
