--- a/home/templates/home/product_details.html
+++ b/home/templates/home/product_details.html
@@ -10,7 +10,8 @@
         <div class="col-12 p-3">
             <a class="btn btn-warning h1 refresh" href="{% url 'home' %}">Back</a>               
         </div>
-    </div>  
+    </div>
+    <div class="col-12 h4 text-center border-bottom">PRODUCT INFO</div>    
     <div class="row m-0">
         <div class="col-12">
             <b>Product Name: </b><span href="{% url 'product_details' product_id=product.id %}">{{ product.product_name }}</span>
@@ -23,14 +24,24 @@
         </div>
         <div class="col-12">
             <b>Product Rating: </b><span>{{ product.product_rating }}</span>
-        </div>
-        <div class="col-12">
-            <b>Price &#8364: </b><span>{{ product.product_price }}</span>
-        </div>           
+        </div>                 
     </div>
-    {% for offer in offers %} 
-        {{ offer.offer_json }}
-    {% endfor %}           
+    <div class="col-12 h4 text-center border-bottom">SELLERS</div>    
+    <div class="row m-0">
+        
+        {% for offer in offers %}            
+            <div class="col-4">
+                <b>Seller Name: </b><span>{{ offer.seller_name }}</span>
+            </div> 
+            <div class="col-4">                
+                <b>Is Main Seller: </b><span>{{ offer.main_seller }}</span>
+            </div> 
+            <div class="col-4">
+                <b>Price: </b><span>{{ offer.product_price}}</span>
+            </div> 
+        {% endfor %}
+   </div>
+            
 {% endblock %}
 
 {% block extra_js %}              
