add headless option to chromedriver

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -26,7 +26,8 @@
         </div>  
         <div class="col-12 mt-3">
             <a class="btn btn-warning h1 refresh" href="{% url 'extractor' %}">Refresh Data</a>               
-        </div>              
+        </div>
+        <div class="col-12 text-center h4">Products: {{ count }}</div>              
     </div>    
     {% for product in products %}        
         <div class="row m-1">
