linting perfomed on view.py

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -23,11 +23,11 @@
         </div>
         <div class="col-12 mt-3">
             <a class="btn btn-info h1 refresh" href="{% url 'home' %}">Reset Search</a>               
-        </div>  
-        <div class="col-12 mt-3">
+        </div>         
+        <div class="col-4 mt-3">
             <a class="btn btn-warning h1 refresh" href="{% url 'extractor' %}">Refresh Data</a>               
-        </div>
-        <div class="col-12 text-center h4">Products: {{ count }}</div>              
+        </div>       
+        <div class="col-12 text-center h4">{{ count }} Products</div>              
     </div>    
     {% for product in products %}        
         <div class="row m-1">
