--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
         <!-- Message template -->  
         {% if messages %}            
         {% endif %}
-        <div class="overlay"></div> 
+        <div class="overlay text-center text-info h1 pt-5 loaded"></div> 
         <div class="content">
             {% block content %}                
             {% endblock %}
