modify product json to include offers for easier iteration

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -21,11 +21,12 @@
                     </div>                
                 </form> 
             </div> 
-            <a class="col-4 col-md-2 col-lg-2 btn btn-info h1 mt-2" href="{% url 'home' %}">Reset Search</a>      
+            <a class="col-4 col-md-4 col-lg-2 btn btn-info h1 mt-2" href="{% url 'home' %}">Reset Search</a>      
         </div>
         <div class="col-12 mt-3">
             <a class="btn btn-warning h1 refresh" href="{% url 'extractor' %}">Refresh Data</a>
-            <a class="btn btn-success h1 refresh" href="{% url 'save_database' %}">Save database</a>                                       
+            <a class="btn btn-success h1 refresh" href="{% url 'save_database' %}">Save database</a>
+            <a class="btn btn-info h1" href="{% url 'data_view' %}">History View</a>                                          
         </div>                      
         <div class="col-12 text-center h4">{{ count }} Products</div>              
     </div>    
@@ -36,7 +37,7 @@
                     <a href="{% url 'product_details' product_id=product.id %}">{{ product.id }}.{{ product.product_name }}</a>
                 </div>
             {% else %}
-                <div class="col-12 bg-line"> 
+                <div class="col-12 bg-secondary"> 
                     <a href="{% url 'product_details' product_id=product.id %}">{{ product.id }}.{{ product.product_name }}</a>
                 </div>
             {% endif %}                   
