add all products details in history view for JSON upload

--- a/home/templates/home/data_view.html
+++ b/home/templates/home/data_view.html
@@ -18,7 +18,8 @@
                 <form action="{% url 'data_view' %}" method="GET">
                     {% csrf_token %}
                     <div class="input-group">
-                        <input type="search" class="form-control custom-select rounded-0 border-2 border-dark" name="q" placeholder="Product Name">
+                        <input type="search" class="form-control custom-select rounded-0 border-2 border-dark" name="q" 
+                            placeholder="Product Name">
                         <input type="hidden" class="hidden" name="filename" value='{{ file }}'>
                         <button class="btn btn-outline-dark bg-dark text-light rounded-0 input-group-append ml-auto search-button" type="submit"><div class="text">Search</div></button>
                     </div>                
@@ -30,13 +31,16 @@
     <div class="data-form p-3">
         <form action="#" method="POST" id="data-form" enctype="multipart/form-data">
             {% csrf_token %}
-            <input type="file" id="myFile" name="filename">
+            <input type="file" id="myFile" name="filename" required>
             <button class="btn btn-secondary" type="submit" form="data-form">Submit</button>
         </form>
     </div> 
     {% for product in products %}        
         <div class="row m-1 mb-3 border-bottom border-dark">            
                 <div class="bg-secondary"><b>{{ product.id }}.{{ product.product_name }}</b></div>
+                <div class="col-12"><b>Product URL:</b> {{ product.product_url }}</div>
+                <div class="col-12"><b>Product image URL:</b> {{ product.product_image_url }}</div>
+                <div class="col-12"><b>Product rating:</b> {{ product.product_rating }}</div>                
                 <div class="h5 text-center border-bottom">Offers</div>
                 <div class="col-4 text-center">Seller name</div>
                 <div class="col-4 text-center">Is Main Seller</div>
