--- a/home/templates/home/previous_run.html
+++ b/home/templates/home/previous_run.html
@@ -24,9 +24,9 @@
     {% for product in products %}        
         <div class="row m-1 mb-3 border-bottom border-dark">            
                 <div class="bg-secondary"><b>{{ product.id }}.{{ product.product_name }}</b></div>
-                <div class="col-12"><b>Product URL:</b> {{ product.product_url }}</div>
-                <div class="col-12"><b>Product image URL:</b> {{ product.product_image_url }}</div>
-                <div class="col-12"><b>Product rating:</b> {{ product.product_rating }}</div>                
+                <div class="col-12"><b>Product URL:</b><a href="{{ product.product_url }}" target="_blank">{{ product.product_url }}</a></div>
+                <div class="col-12"><b>Product image URL:</b><a href="{{ product.product_image_url }}" target="_blank">{{ product.product_image_url }}</a></div>
+                <div class="col-12"><b>Product rating:</b> {{ product.product_rating }}</div> 
                 <div class="h5 text-center border-bottom">Offers</div>
                 <div class="col-4 text-center">Seller name</div>
                 <div class="col-4 text-center">Is Main Seller</div>
