--- a/home/templates/home/previous_run.html
+++ b/home/templates/home/previous_run.html
@@ -10,6 +10,7 @@
     <div class="row m-0">        
         <div class="col-12 mt-3">
             <a class="btn btn-dark h1" href="{% url 'data_view' %}">back</a>
+            <a class="btn btn-success h1 refresh" href="{% url 'save_database' history_id=data.id %}">Save database</a>
         </div>
         <div class="col-12 border-bottom">Previous Runs</div>       
         {% for result in history %}
@@ -23,22 +24,21 @@
     </div>  
     {% for product in products %}        
         <div class="row m-1 mb-3 border-bottom border-dark">            
-                <div class="bg-secondary"><b>{{ product.id }}.{{ product.product_name }}</b></div>
-                <div class="col-12"><b>Product URL:</b><a href="{{ product.product_url }}" target="_blank">{{ product.product_url }}</a></div>
-                <div class="col-12"><b>Product image URL:</b><a href="{{ product.product_image_url }}" target="_blank">{{ product.product_image_url }}</a></div>
-                <div class="col-12"><b>Product rating:</b> {{ product.product_rating }}</div> 
-                <div class="h5 text-center border-bottom">Offers</div>
-                <div class="col-4 text-center">Seller name</div>
-                <div class="col-4 text-center">Is Main Seller</div>
-                <div class="col-4 text-center">Product price</div>
-                {% for offer in product.offers %}
-                    {% for key, value in offer.items %}
-                        <div class="col-4 text-center">
-                            {{ value }}
-                        </div>                        
-                    {% endfor %}
-                {% endfor %}              
-                               
+            <div class="bg-secondary"><b>{{ product.id }}.{{ product.product_name }}</b></div>
+            <div class="col-12"><b>Product URL:</b><a href="{{ product.product_url }}" target="_blank">{{ product.product_url }}</a></div>
+            <div class="col-12"><b>Product image URL:</b><a href="{{ product.product_image_url }}" target="_blank">{{ product.product_image_url }}</a></div>
+            <div class="col-12"><b>Product rating:</b> {{ product.product_rating }}</div> 
+            <div class="h5 text-center border-bottom">Offers</div>
+            <div class="col-4 text-center border-bottom">Seller name</div>
+            <div class="col-4 text-center border-bottom">Is Main Seller</div>
+            <div class="col-4 text-center border-bottom">Product price</div>
+            {% for offer in product.offers %}
+                {% for key, value in offer.items %}
+                    <div class="col-4 text-center">
+                        {{ value }}
+                    </div>                        
+                {% endfor %}
+            {% endfor %}              
         </div>    
     {% endfor %}              
 {% endblock %}
